[gd_scene format=3 uid="uid://dlj2qy78imkef"]

[ext_resource type="PackedScene" uid="uid://cnb2nbepksohy" path="res://Scenes/Note.tscn" id="2_70j8v"]
[ext_resource type="PackedScene" uid="uid://biu6vahw6bwla" path="res://Scenes/Player.tscn" id="3_03b8h"]
[ext_resource type="Script" uid="uid://chrs7sgunqa6m" path="res://Scripts/End.gd" id="6"]

[node name="End" type="Node2D" unique_id=1527785001]
script = ExtResource("6")

[node name="GradeLabel" type="Label" parent="." unique_id=871920757]
visible = false
offset_left = 63.0
offset_top = 456.0
offset_right = 112.0
offset_bottom = 479.0
text = "grade:"
vertical_alignment = 1

[node name="GradeNumber" type="Label" parent="." unique_id=346692580]
visible = false
offset_left = 129.0
offset_top = 467.0
offset_right = 130.0
offset_bottom = 490.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="." unique_id=1364564459]
visible = false
offset_left = 61.0
offset_top = 383.0
offset_right = 150.0
offset_bottom = 406.0
text = "final score: "
vertical_alignment = 1

[node name="ScoreNumber" type="Label" parent="." unique_id=659136077]
visible = false
offset_left = 157.0
offset_top = 393.0
offset_right = 158.0
offset_bottom = 416.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="ComboLabel" type="Label" parent="." unique_id=1494932437]
visible = false
offset_left = 63.0
offset_top = 420.0
offset_right = 158.0
offset_bottom = 443.0
text = "max combo:"
vertical_alignment = 1

[node name="ComboNumber" type="Label" parent="." unique_id=81183365]
visible = false
offset_left = 172.0
offset_top = 429.0
offset_right = 173.0
offset_bottom = 452.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="GreatLabel" type="Label" parent="." unique_id=1223614696]
visible = false
offset_left = 211.0
offset_top = 532.0
offset_right = 256.0
offset_bottom = 555.0
text = "great:"
vertical_alignment = 1

[node name="GreatNumber" type="Label" parent="." unique_id=614205630]
visible = false
offset_left = 269.0
offset_top = 538.0
offset_right = 270.0
offset_bottom = 561.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="GoodLabel" type="Label" parent="." unique_id=1804358293]
visible = false
offset_left = 359.0
offset_top = 532.0
offset_right = 402.0
offset_bottom = 555.0
text = "good:"
vertical_alignment = 1

[node name="GoodNumber" type="Label" parent="." unique_id=1568512858]
visible = false
offset_left = 413.0
offset_top = 540.0
offset_right = 414.0
offset_bottom = 563.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="OkayLabel" type="Label" parent="." unique_id=1734417107]
visible = false
offset_left = 535.0
offset_top = 532.0
offset_right = 577.0
offset_bottom = 555.0
text = "okay:"
vertical_alignment = 1

[node name="OkayNumber" type="Label" parent="." unique_id=266415021]
visible = false
offset_left = 584.0
offset_top = 541.0
offset_right = 585.0
offset_bottom = 564.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="MissedLabel" type="Label" parent="." unique_id=1760042718]
visible = false
offset_left = 742.0
offset_top = 537.0
offset_right = 801.0
offset_bottom = 560.0
text = "missed:"
vertical_alignment = 1

[node name="MissedNumber" type="Label" parent="." unique_id=1061677220]
visible = false
offset_left = 814.0
offset_top = 552.0
offset_right = 815.0
offset_bottom = 575.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="GameOver" type="Label" parent="." unique_id=1388900849]
offset_left = 340.0
offset_top = 76.0
offset_right = 796.0
offset_bottom = 186.0
theme_override_colors/font_outline_color = Color(0.1764706, 0.011764706, 0.6117647, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 80
text = "Game Over!"

[node name="Info" type="Label" parent="." unique_id=1103948988]
offset_left = -7.0
offset_top = 205.0
offset_right = 1141.0
offset_bottom = 374.0
theme_override_colors/font_color = Color(0.7176471, 0.7176471, 0.7176471, 1)
theme_override_colors/font_outline_color = Color(0.1764706, 0.011764706, 0.6117647, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Press Spacebar to
Return to Main Menu"
horizontal_alignment = 1

[node name="Note" parent="." unique_id=974388935 instance=ExtResource("2_70j8v")]
position = Vector2(147, 576)
script = null

[node name="Note2" parent="." unique_id=781429734 instance=ExtResource("2_70j8v")]
position = Vector2(46, 481)
script = null

[node name="Note3" parent="." unique_id=1440462575 instance=ExtResource("2_70j8v")]
position = Vector2(1025, 49)
script = null

[node name="Note4" parent="." unique_id=1881415520 instance=ExtResource("2_70j8v")]
position = Vector2(1102, 100)
script = null

[node name="Player" parent="." unique_id=560582400 instance=ExtResource("3_03b8h")]
position = Vector2(944, 470.00003)
rotation = -1.7156587
scale = Vector2(0.5, 0.5)
script = null
